# singin

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  dbclient.py  dbgui.pyw  dbman.h  dbman.py  dbman.pyw  readme.md  report_absent.cpp  signin.py  stuinfo.json  test_client.py  test_dbman.cpp  today_info.cpp  trainer.pyw  trigger.py  watchdog.pyw  write_record.cpp
client/: dbclient.py  dbgui.pyw  gui_common.py  test_client.py
cppser/: CMakeLists.txt  app.cpp  app.h  dbman.cpp  dbman.h  dog_helper.cpp  libspirit.rc  logger.cpp  logger.h  singd.cpp  singd.h  singd_helper.cpp  singer.cpp  spiritd.rc  watchdog.cpp
cppser/test/: rw_test.cpp  song_test.cpp  watchd.cpp  webio.cpp
dbserv/: Makefile  dbman.h  dbman.pyw  report_absent.cpp  sess_req.cpp  today_info.cpp  watchdog.pyw
include/: sqlite3mc.h  sqlite3mc_version.h  sqlite3mc_vfs.h
notif/: Makefile  addnews.cpp  in_signin.cpp  machine_id.cpp  notnet.py  notnet.pyw  notop.py
prox/: adapt.py  prox.py
